<resources>
    <string name="app_name">Workout</string>
    <string name="select_lift">Select Lift</string>
    <string name="select_workout_type">Select Workout Type</string>
    <string name="select_weight">Select Weight</string>
    <string name="submit_button">Submit</string>
    <string name="default_reps">0 reps</string>
    <string name="default_weights">0 lbs</string>
    <string name="previous_weights">Previous Weights</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="forearms">Forearms</string>
    <string name="legs">Legs</string>
    <string name="shoulders">Shoulders</string>
    <string name="record_weights">Record Weights</string>
    <string name="view_past_entries">View Entries</string>
    <string name="past_entries">Past Entries</string>
    <string name="settings">Settings</string>
    <string name="switch_users">Switch Users</string>
    <string name="users">Users</string>
    <string name="new_user">New User</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_lift">New Workout</string>
    <string name="lift_name">Workout Name</string>
    <string name="type_name">Type Name</string>
    <string name="new_type">New Lift Category</string>

    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="current_date">July, 2018</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

    <string name="lbs">%d lbs</string>
    <string name="null_lbs">-- lbs</string>

    <string name="null_reps">-- reps</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="new_workout_name">New Workout Name</string>
    <string name="sets">Sets</string>
    <string name="repetitions">Repetitions</string>
    <string name="weight">Weight</string>
    <string name="workout">Workout</string>
    <string name="_0">0</string>
    <string name="today">Today</string>
    <string name="_1">1</string>
    <plurals name="reps">
        <item quantity="zero">-- reps</item>
        <item quantity="one">%d rep</item>
        <item quantity="other">%d reps</item>
    </plurals>
</resources>
