<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/editLiftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/edit_workout"
        android:layout_marginTop="53dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editLiftInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="171dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_workout_name"
            android:textColor="@color/textPrimary"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/editLiftSubmitButton"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        android:background="@color/submitButton"
        android:text="@string/submit_button"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textColor="@color/textPrimary"
        android:textSize="30sp" />

</RelativeLayout>